# speech-to-text-api

./: .env  .gitignore  .pre-commit-config.yaml  .templatesyncignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/copilot-instructions/: copilot-commit-instructions.md
.github/workflows/: CI.yml  check.yml  deploy-docker-image.yml  deploy-github-release.yml  deploy.yml  release.yml  template-sync.yml
docs/: DEVELOPER.md  DOCKERHUB.md  README.md  TEMPLATE_SETUP.md
script/: speach-to-text-api.spec  speech-to-text-api.spec
src/: main.py
src/api/: server.py
src/api/dtos/: error_response_dto.py  language_dto.py  transcribe_dto.py  transcribe_result_dto.py  transcribe_srt_result_dto.py  transcribe_text_result_dto.py
src/api/handlers/: global_exception_handler.py
src/api/middlewares/: process_time_middleware.py
src/api/routers/: transcribe_router.py
src/application/usecases/: file_transcribe_usecase.py  transcribe_file_to_srt_usecase.py  transcribe_file_to_text_usecase.py
src/assets/mappings/: whisper_mapping.json
src/config/: app_config.py
src/core/config/: app_config.py
src/core/logger/: logger.py
src/core/timer/: timer.py
src/data/factories/: speach_to_text_worker_factory.py  speech_to_text_worker_factory.py  translation_worker_factory.py
src/data/repositories/: directory_repository_impl.py  file_repository_impl.py  speach_to_text_repository_impl.py  speech_to_text_repository_impl.py  translation_model_repository_impl.py  whisper_repository.py  whisper_repository_impl.py
src/data/workers/: base_worker.py  mbart_translation_worker.py  mbart_worker.py  seamless_translation_worker.py  seamless_worker.py  whisper_speach_to_text_worker.py  whisper_speech_to_text_worker.py  whisper_worker.py
src/domain/exceptions/: invalid_file_name_error.py  invalid_file_path_error.py
src/domain/models/: sentence_model.py  subtitle_segment_model.py  transcription_result_model.py
src/domain/repositories/: file_repository.py  speach_to_text_repository.py  speech_to_text_repository.py  translation_model_repository.py  whisper_repository.py
src/domain/services/: file_service.py  language_mapping_service.py  sentence_service.py  subtitle_service.py  transcription_service.py  translation_service.py
tests/: test_main.py
tests/api/: test_server.py
tests/api/dtos/: test_language_dto.py  test_transcribe_dto.py  test_transcribe_result_dto.py  test_transcribe_text_result_dto.py
tests/api/middlewares/: test_process_time_middleware.py
tests/api/routers/: test_transcribe_router.py
tests/application/usecases/: test_file_transcribe_usecase.py  test_transcribe_file_to_srt_usecase.py  test_transcribe_file_to_text_usecase.py
tests/config/: test_app_config.py
tests/core/config/: test_app_config.py
tests/core/cuda/: test_cuda_checker.py
tests/core/logger/: test_logger.py
tests/core/timer/: test_timer.py
tests/data/factories/: test_speach_to_text_worker_factory.py  test_speech_to_text_worker_factory.py  test_translation_worker_factory.py
tests/data/repositories/: test_directory_repository_impl.py  test_file_repository_impl.py  test_speach_to_text_repository_impl.py  test_speech_to_text_repository_impl.py  test_translation_model_repository_impl.py  test_whisper_repository.py  test_whisper_repository_impl.py
tests/data/workers/: test_base_worker.py  test_mbart_translation_worker.py  test_mbart_worker.py  test_seamless_translation_worker.py  test_seamless_worker.py  test_whisper_speach_to_text_worker.py  test_whisper_speech_to_text_worker.py  test_whisper_worker.py
tests/domain/services/: test_file_service.py  test_language_mapping_service.py  test_sentence_service.py  test_subtitle_service.py  test_transcription_service.py  test_translation_service.py
